# DrIll

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_and_release.bat  build_project_only.bat  cmake_and_build.bat  cmake_and_release.bat  cmake_build_release.bat  main.cpp  release.bat
MathFunctions/: CMakeLists.txt
src/: CMakeLists.txt  Circle.cpp  Circle.h  MyCircle.cpp  MyCircle.h  main.cpp
src/_m_example/: sample_mod.cpp  sample_mod.h
src/example_module/: CMakeLists.txt
src/img_proc/: img_proc.h  imp_proc.cpp  main.cpp  test.cpp
src/m_window/: my_window.cpp
src/mod1/: MyCircle.h
src/mod2/: CMakeLists.txt
src/test_circle/: CMakeLists.txt  my_window.h
src/windows_api/: window_controller.cpp  window_controller.h
